Fixed overflow issue causing test #7 to fail

--- a/src/App.css
+++ b/src/App.css
@@ -522,9 +522,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hidden {
   display: none;
 }
-.h-72 {
-  height: 18rem;
-}
 .h-full {
   height: 100%;
 }
@@ -723,10 +720,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 .pb-4 {
   padding-bottom: 1rem;
