--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,4 +1,4 @@
-html, body {
+body {
   width: 100vw;
   height: 100%;
   margin: 0;
